Initial launchpad announcement parser implementation

--- a/style.css
+++ b/style.css
@@ -67,12 +67,8 @@ list-style: none;
 padding-left: 10px;
 }
 
-/*
-#leftnav li{
-margin-left: 0px;
+
+#news_item{
+    background-color: #ddd;
 }
-*/
-
-/* ######################################################################
-
-   */
+/* ######################################################################  */
